--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Welcome to Game Platform</h1>
         <p>Sign up now to start playing exciting games!</p>
-        <a href="https://page-pay-ideas-herbs.trycloudflare.com" class="button">Register Now</a>
+        <a href="rasm.jpg" class="button">Register Now</a>
     </div>
 </body>
 </html>
